--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
@@ -20,6 +21,7 @@
     "react-dom": "18.2.0",
     "sass": "^1.64.2",
     "swiper": "^10.1.0",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.3"
   }
 }
