--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "frizbee-ceramics",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.7.16",
-    "@heroicons/react": "^2.0.18",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.5",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.13",
-    "framer-motion": "^10.16.1",
-    "next": "13.4.13",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.64.2",
-    "swiper": "^10.1.0",
-    "swr": "^2.2.0",
-    "tailwindcss": "3.3.3"
-  }
+	"name": "frizbee-ceramics",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"postinstall": "patch-package"
+	},
+	"dependencies": {
+		"@headlessui/react": "^1.7.16",
+		"@heroicons/react": "^2.0.18",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/forms": "^0.5.5",
+		"autoprefixer": "10.4.14",
+		"axios": "^1.4.0",
+		"eslint": "8.46.0",
+		"eslint-config-next": "13.4.13",
+		"framer-motion": "^10.16.1",
+		"next": "13.4.13",
+		"postcss": "8.4.27",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"sass": "^1.64.2",
+		"swiper": "^10.1.0",
+		"swr": "^2.2.0",
+		"tailwindcss": "3.3.3"
+	},
+	"devDependencies": {
+		"patch-package": "^8.0.0"
+	}
 }
