--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"sass": "^1.64.2",
+		"sharp": "^0.32.5",
 		"swiper": "^10.1.0",
 		"swr": "^2.2.0",
 		"tailwindcss": "3.3.3"
