--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"eslint-config-next": "13.4.13",
 		"framer-motion": "^10.16.1",
 		"next": "13.4.13",
+		"popmotion": "^11.0.5",
 		"postcss": "8.4.27",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
