--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"postcss": "8.4.27",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-responsive": "^9.0.2",
 		"sass": "^1.64.2",
 		"sharp": "^0.32.5",
 		"swiper": "^10.1.0",
