--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
 		"autoprefixer": "10.4.14",
 		"axios": "^1.4.0",
 		"eslint": "8.46.0",
-		"eslint-config-next": "13.4.13",
+		"eslint-config-next": "^14.0.4",
 		"framer-motion": "^10.16.1",
-		"next": "13.4.13",
+		"i": "^0.3.7",
+		"next": "^14.0.4",
 		"popmotion": "^11.0.5",
 		"postcss": "8.4.27",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-responsive": "^9.0.2",
 		"sass": "^1.64.2",
 		"sharp": "^0.32.5",
