--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-	"name": "frizbee-ceramics",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint",
-		"postinstall": "rm -rf node_modules/package-name && npm i --ignore-scripts && npx patch-package"
-	},
-	"dependencies": {
-		"@headlessui/react": "^1.7.16",
-		"@heroicons/react": "^2.0.18",
-		"@tailwindcss/aspect-ratio": "^0.4.2",
-		"@tailwindcss/forms": "^0.5.5",
-		"autoprefixer": "10.4.14",
-		"axios": "^1.4.0",
-		"eslint": "8.46.0",
-		"eslint-config-next": "^14.0.4",
-		"framer-motion": "^10.16.1",
-		"i": "^0.3.7",
-		"next": "^14.0.4",
-		"popmotion": "^11.0.5",
-		"postcss": "8.4.27",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-responsive": "^9.0.2",
-		"sass": "^1.64.2",
-		"sharp": "^0.32.5",
-		"swiper": "^10.1.0",
-		"swr": "^2.2.0",
-		"tailwindcss": "3.3.3"
-	},
-	"devDependencies": {
-		"patch-package": "^8.0.0"
-	}
+  "name": "frizbee-ceramics",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "rm -rf node_modules/package-name && npm i --ignore-scripts && npx patch-package"
+  },
+  "dependencies": {
+    "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.5",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "eslint": "8.46.0",
+    "eslint-config-next": "^14.0.4",
+    "framer-motion": "^10.16.1",
+    "i": "^0.3.7",
+    "next": "^14.0.4",
+    "popmotion": "^11.0.5",
+    "postcss": ">=8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
+    "sass": "^1.64.2",
+    "sharp": "^0.32.5",
+    "swiper": "^10.1.0",
+    "swr": "^2.2.0",
+    "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "patch-package": "^8.0.0"
+  }
 }
