--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "rm -rf node_modules/package-name && npm i --ignore-scripts && npx patch-package"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.16",
+    "@headlessui/react": "1.7.16",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.5",
