revamped nav structure with flexible layouts

--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "postinstall": "rm -rf node_modules/package-name && npm i --ignore-scripts && npx patch-package"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "1.7.16",
     "@heroicons/react": "^2.0.18",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^5.15.2",
+    "@plaiceholder/next": "^3.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.5",
+    "@tanstack/react-query": "^5.15.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.46.0",
@@ -21,6 +27,7 @@
     "framer-motion": "^10.16.1",
     "i": "^0.3.7",
     "next": "^14.0.4",
+    "plaiceholder": "^3.0.0",
     "popmotion": "^11.0.5",
     "postcss": ">=8.4.31",
     "react": "^18.2.0",
