--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": ">=8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-responsive": "^9.0.2",
     "sass": "^1.64.2",
     "sharp": "^0.32.5",
