--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "1.7.16",
     "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.15.7",
+    "@next/third-parties": "^14.1.4",
     "@plaiceholder/next": "^3.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.5",
@@ -25,7 +26,7 @@
     "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.16.1",
     "i": "^0.3.7",
-    "next": "^14.1.0",
+    "next": "^14.1.4",
     "plaiceholder": "^3.0.0",
     "popmotion": "^11.0.5",
     "postcss": ">=8.4.31",
