--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "popmotion": "^11.0.5",
     "postcss": ">=8.4.31",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "sass": "^1.64.2",
